Pass value to GreetComponent

--- a/basic-app/src/app/app.component.html
+++ b/basic-app/src/app/app.component.html
@@ -1,7 +1,4 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
-  <h1>
-    <greet></greet>
-  </h1>
-  <h2>My name is Ruben</h2>
+  <greet message="Hi there, my name is Ruben."></greet>
 </div>
