Add service to basic-app

--- a/basic-app/src/app/app.component.html
+++ b/basic-app/src/app/app.component.html
@@ -1,4 +1,4 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
-  <greet message="Hi there, my name is Ruben."></greet>
+  <greet [message]="greetMessage"></greet>
 </div>
